--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -8,32 +8,33 @@
 </head>
 <body>
   <!-- Sidebar -->
-<aside class="w-64 bg-white shadow-xl rounded-r-2xl flex flex-col h-screen">
-  <!-- Header / Logo -->
-  <div class="text-center py-6 border-b border-gray-200">
-    <img src="logo.jpg" alt="Logo" class="mx-auto w-20 h-20 object-cover mb-3 rounded-full shadow-lg">
-    <h1 class="text-2xl font-bold text-teal-600">Wellness Menu</h1>
-  </div>
+  <!-- Sidebar -->
+  <!-- Sidebar -->
+  <aside class="w-64 bg-white shadow-xl rounded-r-2xl flex flex-col h-screen relative">
+    <div class="text-center py-6 border-b border-gray-200">
+      <img src="logo.jpg" alt="Logo" class="mx-auto w-20 h-20 object-cover mb-3 rounded-full shadow-lg">
+      <h1 class="text-2xl font-bold text-teal-600">Wellness Menu</h1>
+    </div>
 
-  <!-- Navigation -->
-  <nav class="flex-1 flex flex-col mt-6">
-    <a href="dashboard.html" 
-       class="px-6 py-3 mb-2 text-gray-700 font-medium rounded-l-full hover:bg-teal-50 hover:text-teal-700 transition flex items-center gap-3">
-      <span class="material-icons">dashboard</span>
-      Dashboard
+    <nav class="flex-1 flex flex-col mt-6">
+      <a href="dashboard.html" class="px-6 py-3 mb-2 text-gray-700 font-medium rounded-l-full hover:bg-teal-50 hover:text-teal-700 transition flex items-center gap-3">
+        Dashboard
+      </a>
+      <a href="settings.html" class="px-6 py-3 mb-2 text-gray-700 font-medium rounded-l-full hover:bg-teal-50 hover:text-teal-700 transition flex items-center gap-3">
+        Settings
+      </a>
+    </nav>
+
+    <!-- Chatbot button -->
+    <a href="chatbot.html"
+       class="absolute bottom-6 left-1/2 transform -translate-x-1/2 px-6 py-3 bg-teal-600 text-white font-semibold rounded-full shadow-lg hover:bg-teal-700 transition flex items-center gap-2">
+      <span class="material-icons">chat</span>
+      Chatbot
     </a>
-    <a href="settings.html" 
-       class="px-6 py-3 mb-2 text-gray-700 font-medium rounded-l-full hover:bg-teal-50 hover:text-teal-700 transition flex items-center gap-3">
-      <span class="material-icons">settings</span>
-      Settings
-    </a>
-  </nav>
 
-  <!-- Optional Footer -->
-  <div class="px-6 py-4 border-t border-gray-200 text-sm text-gray-500">
-    &copy; 2025 Wellness App
-  </div>
-</aside>
-
+    <div class="px-6 py-4 border-t border-gray-200 text-sm text-gray-500 mt-auto">
+      &copy; 2025 Wellness App
+    </div>
+  </aside>
 </body>
 </html>
